--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -231,6 +231,7 @@ h2 {
   .top-hero-wrapper {
   width: 100%;
   height: 100%;
+  }
 }
 
 @media screen and (min-width:1280px) {
@@ -240,6 +241,7 @@ h2 {
   .top-hero-wrapper {
   width: 100%;
   height: 100%;
+  }
 }
 
 
