--- a/app/views/profiles/index.html.erb
+++ b/app/views/profiles/index.html.erb
@@ -10,7 +10,7 @@
             <%= image_tag profile.image.url %>
 　　　　　　<%= link_to 'レビューを表示', review_path(profile.id), method: :GET %>
 　　　　
-            <% if !current_user.following?(profile.user) and !profile.user.following?(current_user) %>
+            <% if !current_user.following?(profile.user) and !profile.user.following?(current_user) and current_user.certify? %>
               <%= link_to '購入へ進む', profile_path(profile.user.id), method: :GET %>        
             <% end %>
         <% if content_for? :content %>
