--- a/app/views/pages/index2.html.erb
+++ b/app/views/pages/index2.html.erb
@@ -6,7 +6,7 @@
     さらに！ご自身のメッセージやり取りする権利を売ることができます。（アマゾンギフト券での入金になります。１購入につき300円分のアマゾンギフト券をGET!
     ＊販売者はメッセージのやり取りを購入者に対して返信を10回以上行う必要があります。良いレビューがもらえるように丁寧なやり取りを心がけましょう！）</h3>
   </div>
-  　<% if @profile.blank? %>
+  　<% if @profile.blank? and current_user.certify? %>
     　<%= link_to 'プロフィール一を作成する', new_profile_path, method: :GET %> 
     <% end %>
 </div>
