--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -91,7 +91,8 @@ h2 {
   
   .navbar-nav{
     float: right;
-    
+    padding: 0px;
+    margin-top: 15px;
   }
   .navbar-brand {
     padding: 0px;
